--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-hello
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Lisa Marie Schachtschneider</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+</head>
+<body>
+<h1>h1</h1>
+<h2>h2</h2>
+</body>
+</html>
