--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Lisa Marie Schachtschneider</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
+	<link rel="stylesheet" type="text/css" href="../css/reset.css">
 
 </head>
 <body>
