--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
 	<title>Lisa Marie Schachtschneider</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="../css/main.css">
-	<link rel="stylesheet" type="text/css" href="../css/reset.css">
+	<link rel="icon" href="../public/static/img/favicon.ico" type="image/ico" sizes="16x16"/>
+	<link rel="stylesheet" type="text/css" href="../public/static/css/main.css">
+	<link rel="stylesheet" type="text/css" href="../public/static/css/reset.css">
 
 </head>
 <body>
-<h1>h1</h1>
-<h2>h2</h2>
+<h1>Hello!</h1>
+<h2>My name is Lisa Marie Schachtschneider</h2>
+<p>Currently living in the Netherlands, in Utrecht</p>
+<p>Reloacting to Chicago on August 9th</p>
+
 </body>
 </html>
