adding simple content

--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
 
 </head>
 <body>
-<h1>Hello!</h1>
-<h2>My name is Lisa Marie Schachtschneider</h2>
-<p>Currently living in the Netherlands, in Utrecht</p>
-<p>Reloacting to Chicago on August 9th</p>
-
+	<section class="page-home">
+		<h1>Lisa Marie Schachtschneider</h1>
+		<p>I currently live in <a href="https://goo.gl/maps/sziZ3aSt1Vk">Utrecht</a>, The Netherlands.</p>
+		<p>I am reloacting to <a href="https://goo.gl/maps/2GgrXaikJEH2">Chicago</a>, Illinois on August 9th.</p>
+		<p>I write code and use <a href="github.com">GitHub</a> and <a href="gitlab.com">GitLab</a>.</p>
+		<p>I was a Creative Developer Trainee at <a href="superherocheesecake.com">Superhero Cheesecake</a>.</p>
+		<p>I used to manage retail stores in <a href="https://goo.gl/maps/xqescKeyGrT2">Champaign</a>, Illinois.</p>
+		<p>I am originally from a suburb of Chicago.</p>
+		<p>I want to find a new place of work that will help me grow and learn as a developer.</p>
+		<p>I'm interested in JavaScript, Ruby and Rails.</p>
+		<p>While at Superhero Cheesecake, I wrote HTML/CSS/Vanilla Javascript with some fun <a href="http://greensock.com/">GreenSock</a> animations.</p>
+	</section>
 </body>
 </html>
