--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 <body>
 	<section class="page-home">
-		<h1>Lisa Marie Schachtschneider</h1>
-		<p>I currently live in <a href="https://goo.gl/maps/sziZ3aSt1Vk">Utrecht</a>, The Netherlands.</p>
-		<p>I am reloacting to <a href="https://goo.gl/maps/2GgrXaikJEH2">Chicago</a>, Illinois on August 9th.</p>
-		<p>I write code and use <a href="github.com">GitHub</a> and <a href="gitlab.com">GitLab</a>.</p>
-		<p>I was a Creative Developer Trainee at <a href="superherocheesecake.com">Superhero Cheesecake</a>.</p>
-		<p>I used to manage retail stores in <a href="https://goo.gl/maps/xqescKeyGrT2">Champaign</a>, Illinois.</p>
-		<p>I am originally from a suburb of Chicago.</p>
-		<p>I want to find a new place of work that will help me grow and learn as a developer.</p>
-		<p>I'm interested in JavaScript, Ruby and Rails.</p>
-		<p>While at Superhero Cheesecake, I wrote HTML/CSS/Vanilla Javascript with some fun <a href="http://greensock.com/">GreenSock</a> animations.</p>
+		<h1 class="title">Lisa Marie Schachtschneider</h1>
+		<p class="p">I currently live in <a href="https://goo.gl/maps/sziZ3aSt1Vk">Utrecht</a>, The Netherlands.</p>
+		<p class="p">I am reloacting to <a class="link" href="https://goo.gl/maps/2GgrXaikJEH2">Chicago</a>, Illinois on August 9th.</p>
+		<p class="p">I write code and use <a class="link" href="https://github.com/lisamschachtschneider/">GitHub</a> and <a href="https://gitlab.com/u/lmschachtschneider">GitLab</a>.</p>
+		<p class="p">I was a Creative Developer Trainee at <a class="link" href="superherocheesecake.com">Superhero Cheesecake</a>.</p>
+		<p class="p">I used to manage retail stores in <a class="link" href="https://goo.gl/maps/xqescKeyGrT2">Champaign</a>, Illinois.</p>
+		<p class="p">I am originally from a suburb of Chicago.</p>
+		<p class="p">I want to find a new place of work that will help me grow and learn as a developer.</p>
+		<p class="p">I'm interested in JavaScript, Ruby and Rails.</p>
+		<p class="p">While at Superhero Cheesecake, I wrote HTML/CSS/Vanilla Javascript with some fun <a class="link" href="http://greensock.com/">GreenSock</a> animations.</p>
 	</section>
 </body>
 </html>
