adding more link styling

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
 	<section class="page-home">
 		<h1 class="title">Lisa Marie Schachtschneider</h1>
-		<p class="p">I currently live in <a href="https://goo.gl/maps/sziZ3aSt1Vk">Utrecht</a>, The Netherlands.</p>
+		<p class="p">I currently live in <a class="link" href="https://goo.gl/maps/sziZ3aSt1Vk">Utrecht</a>, The Netherlands.</p>
 		<p class="p">I am reloacting to <a class="link" href="https://goo.gl/maps/2GgrXaikJEH2">Chicago</a>, Illinois on August 9th.</p>
-		<p class="p">I write code and use <a class="link" href="https://github.com/lisamschachtschneider/">GitHub</a> and <a href="https://gitlab.com/u/lmschachtschneider">GitLab</a>.</p>
+		<p class="p">I write code and use <a class="link" href="https://github.com/lisamschachtschneider/">GitHub</a> and <a class="link" href="https://gitlab.com/u/lmschachtschneider">GitLab</a>.</p>
 		<p class="p">I was a Creative Developer Trainee at <a class="link" href="superherocheesecake.com">Superhero Cheesecake</a>.</p>
 		<p class="p">I used to manage retail stores in <a class="link" href="https://goo.gl/maps/xqescKeyGrT2">Champaign</a>, Illinois.</p>
 		<p class="p">I am originally from a suburb of Chicago.</p>
