--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
 <head>
+	<meta charset="utf-8">
 	<title>Lisa Marie Schachtschneider</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="../public/static/img/favicon.ico" type="image/ico" sizes="16x16"/>
-	<link rel="stylesheet" type="text/css" href="../public/static/css/main.css">
-	<link rel="stylesheet" type="text/css" href="../public/static/css/reset.css">
+	<link rel="icon" href="public/static/img/favicon.ico" type="image/ico" sizes="16x16"/>
+	<link rel="stylesheet" type="text/css" href="public/static/css/main.css">
+	<link rel="stylesheet" type="text/css" href="public/static/css/reset.css">
 
 </head>
 <body>
