--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
+<html>
 <head>
 	<meta charset="utf-8">
 	<title>Lisa Marie Schachtschneider</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="public/static/img/favicon.ico" type="image/ico" sizes="16x16"/>
-	<link rel="stylesheet" type="text/css" href="public/static/css/main.css">
-	<link rel="stylesheet" type="text/css" href="public/static/css/reset.css">
+	<link rel="icon" href="../public/static/img/favicon.ico" type="image/ico" sizes="16x16"/>
+	<link rel="stylesheet" type="text/css" href="../public/static/css/main.css">
+	<link rel="stylesheet" type="text/css" href="../public/static/css/reset.css">
 
 </head>
 <body>
 	<section class="page-home">
 		<h1 class="title">Lisa Marie Schachtschneider</h1>
-		<p class="p">I currently live in <a class="link" href="https://goo.gl/maps/sziZ3aSt1Vk">Utrecht</a>, The Netherlands.</p>
-		<p class="p">I am reloacting to <a class="link" href="https://goo.gl/maps/2GgrXaikJEH2">Chicago</a>, Illinois on August 9th.</p>
-		<p class="p">I write code and use <a class="link" href="https://github.com/lisamschachtschneider/">GitHub</a> and <a class="link" href="https://gitlab.com/u/lmschachtschneider">GitLab</a>.</p>
-		<p class="p">I was a Creative Developer Trainee at <a class="link" href="superherocheesecake.com">Superhero Cheesecake</a>.</p>
-		<p class="p">I used to manage retail stores in <a class="link" href="https://goo.gl/maps/xqescKeyGrT2">Champaign</a>, Illinois.</p>
+		<p class="p">I currently live in <a class="link" href="https://goo.gl/maps/sziZ3aSt1Vk" target="_blank">Utrecht</a>, The Netherlands.</p>
+		<p class="p">I am reloacting to <a class="link" href="https://goo.gl/maps/2GgrXaikJEH2" target="_blank">Chicago</a>, Illinois on August 9th.</p>
+		<p class="p">I write code and use <a class="link" href="https://github.com/lisamschachtschneider/" target="_blank">GitHub</a> and <a class="link" href="https://gitlab.com/u/lmschachtschneider" target="_blank">GitLab</a>.</p>
+		<p class="p">I was a Creative Developer Trainee at <a class="link" href="superherocheesecake.com" target="_blank">Superhero Cheesecake</a>.</p>
+		<p class="p">I used to manage retail stores in <a class="link" href="https://goo.gl/maps/xqescKeyGrT2" target="_blank">Champaign</a>, Illinois.</p>
 		<p class="p">I am originally from a suburb of Chicago.</p>
 		<p class="p">I want to find a new place of work that will help me grow and learn as a developer.</p>
 		<p class="p">I'm interested in JavaScript, Ruby and Rails.</p>
-		<p class="p">While at Superhero Cheesecake, I wrote HTML/CSS/Vanilla Javascript with some fun <a class="link" href="http://greensock.com/">GreenSock</a> animations.</p>
+		<p class="p">While at Superhero Cheesecake, I wrote HTML/CSS/Vanilla Javascript with some fun <a class="link" href="http://greensock.com/" target="_blank">GreenSock</a> animations.</p>
 	</section>
 </body>
 </html>
