--- a/index.html
+++ b/index.html
@@ -12,14 +12,7 @@
 	<div class="main">
 		<section class="page-home">
 			<h1 class="title">Lisa Marie Schachtschneider</h1>
-			<p class="p">I currently live in <a class="link" href="https://goo.gl/maps/sziZ3aSt1Vk" target="_blank">Utrecht</a>, The Netherlands.</p>
-			<p class="p">I am reloacting to <a class="link" href="https://goo.gl/maps/2GgrXaikJEH2" target="_blank">Chicago</a>, Illinois on August 9th.</p>
-			<p class="p">I write code and use <a class="link" href="https://github.com/lisamschachtschneider/" target="_blank">GitHub</a> and <a class="link" href="https://gitlab.com/u/lmschachtschneider" target="_blank">GitLab</a>.</p>
-			<p class="p">I was a Creative Developer Trainee at <a class="link" href="superherocheesecake.com" target="_blank">Superhero Cheesecake</a>.</p>
-			<p class="p">I used to manage retail stores in <a class="link" href="https://goo.gl/maps/xqescKeyGrT2" target="_blank">Champaign</a>, Illinois.</p>
-			<p class="p">I am originally from a suburb of Chicago.</p>
-			<p class="p">I want to find a new place of work that will help me grow and learn as a developer.</p>
-			<p class="p">While at Superhero Cheesecake, I wrote HTML/CSS/Vanilla Javascript with some fun <a class="link" href="http://greensock.com/" target="_blank">GreenSock</a> animations.</p>
+			<h2 class="subtitle">coming soon</h2>
 		</section>
 	</div>
 </body>
