--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
 	<title>Lisa Marie Schachtschneider</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="/Users/LMS/Code/github-pages/public/static/img/favicon.ico" type="image/ico" sizes="16x16"/>
-	<link rel="stylesheet" type="text/css" href="/Users/LMS/Code/github-pages/public/static/css/main.css">
-	<link rel="stylesheet" type="text/css" href="/Users/LMS/Code/github-pages/public/static/css/reset.css">
+	<link rel="icon" href="../public/static/img/favicon.ico" type="image/ico" sizes="16x16"/>
+	<link rel="stylesheet" type="text/css" href="../public/static/css/main.css">
+	<link rel="stylesheet" type="text/css" href="../public/static/css/reset.css">
 
 </head>
 <body>
 	<div class="main">
 		<nav class="nav-bar">
 			<i class="nav-icon">
-				<img width="30" height="30" src="/Users/LMS/Code/github-pages/public/static/img/nav.svg">
+				<img width="30" height="30" src="../public/static/img/nav.svg">
 			</i>
 		</nav>
 		<section class="page-home">
 			<div class="title-section">
 				<h1 class="title">Lisa Marie Schachtschneider</h1>
 				<h2 class="subtitle">Web developer currently looking for a position in Chicago, IL</h2>
-				
+
 
 			</div>
 		</section>
