changing paths to relative

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 	<title>Lisa Marie Schachtschneider</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="/Users/LMS/Code/github-pages/public/static/img/favicon.ico" type="image/ico" sizes="16x16"/>
-	<link rel="stylesheet" type="text/css" href="/Users/LMS/Code/github-pages/public/static/css/main.css">
-	<link rel="stylesheet" type="text/css" href="/Users/LMS/Code/github-pages/public/static/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="/Users/LMS/Code/github-pages/public/static/css/layout.css">
-	<link rel="stylesheet" type="text/css" href="/Users/LMS/Code/github-pages/public/static/css/typography.css">
-	<link rel="stylesheet" type="text/css" href="/Users/LMS/Code/github-pages/public/static/css/page-home.css">
+	<link rel="icon" href="../static/img/favicon.ico" type="image/ico" sizes="16x16"/>
+	<link rel="stylesheet" type="text/css" href="../static/css/main.css">
+	<link rel="stylesheet" type="text/css" href="../static/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="../static/css/layout.css">
+	<link rel="stylesheet" type="text/css" href="../static/css/typography.css">
+	<link rel="stylesheet" type="text/css" href="../static/css/page-home.css">
 
 </head>
 <body>
@@ -16,27 +16,27 @@
 		<div class="page page-home">
 			<header class="header">
 				<i class="header__menu-icon">
-					<img width="30" height="30" src="/Users/LMS/Code/github-pages/public/static/img/icons/nav.svg">
+					<img width="30" height="30" src="../static/img/icons/nav.svg">
 				</i>
 			</header>
 			<div class="section section-intro__copy">
 				<h1 class="title">Lisa Marie Schachtschneider</h1>
 				<h2 class="subtitle">Web developer, with leadership experience, currently looking for a position to learn and grow in Chicago, IL.</h2>
-				<img class="section-intro__icon-chicago" width="40" height="40" src="/Users/LMS/Code/github-pages/public/static/img/icons/chicago.png">
-				<img class="section-intro__icon-title" width="50" height="50" src="/Users/LMS/Code/github-pages/public/static/img/icons/background.svg">
+				<img class="section-intro__icon-chicago" width="40" height="40" src="../static/img/icons/chicago.png">
+				<img class="section-intro__icon-title" width="50" height="50" src="../static/img/icons/background.svg">
 				<h3 class="subheader section-experience__title">Background and Experience</h3>
-				<img class="section-intro__icon" width="100" height="100" src="/Users/LMS/Code/github-pages/public/static/img/icons/learn.png">
+				<img class="section-intro__icon" width="100" height="100" src="../static/img/icons/learn.png">
 				<p class="p">Started learning web development in 2013 by self-instructed learning on Codeacademy and Code School. Attending meetups, and securing 2 internships in Amsterdam and Utrecht.</p>
-				<img class="section-intro__icon" width="100" height="100" src="/Users/LMS/Code/github-pages/public/static/img/icons/work.svg">
+				<img class="section-intro__icon" width="100" height="100" src="../static/img/icons/work.svg">
 				<p class="p">Began my first job as a junior developer at <a class="link" target="_blank" href="http://www.qelp.com">Qelp</a> in February 2014.</p>
-				<img class="section-intro__icon" width="100" height="100" src="/Users/LMS/Code/github-pages/public/static/img/icons/volunteer.png">
+				<img class="section-intro__icon" width="100" height="100" src="../static/img/icons/volunteer.png">
 				<p class="p">Volunteered at <a class="link" target="_blank" href="http://www.railsgirls.nl/">Rails Girls NL</a> by leading a GIT workshop and coaching at multiple workshops teaching girls what MVC architecture is, HTML/CSS and Javascript.</p>
-				<img class="section-intro__icon" width="100" height="100" src="/Users/LMS/Code/github-pages/public/static/img/icons/magic.png">
+				<img class="section-intro__icon" width="100" height="100" src="../static/img/icons/magic.png">
 				<p class="p">Started working at <a class="link" target="_blank" href="http://www.shcc.nl">Superhero Cheesecake</a> in November 2015 until our departure back to the states. While there I learned about improving speed, writing DRY, efficient code and GreenSock animations.</p>
 <!-- 				<p class="p">Hello there! I've recently moved back to the states after 3 wonderful years of living in the Netherlands. Originally from the Chicago suburbs, I went to school in Champaign Urbana to study Art History. After graduting in 2010 I started volunteering at the university's art museum, Krannert and became the Office Manager of a local <a class="link" href="commonground.coop" target="_blank">food co-op</a> . While there I was the tech help-desk for store operations, managed payroll, bookkeeping and hired and managed one employee. Since before college I also had sales experience in the retail sector I stepped up to lead our Owner Loan Campaign to help expand the current store's location to double in size. As Campaign Manager we had an initial goal of $800K and together with a team of volunteers and informative staff members we were able to raise it in under 2 months. When quotes and owner demand grew we found out we needed an additional $200K we achieved it in another month. With $1 million raised and secured in the bank we were able to start and finish construction. I left the co-op to become the assistant manager at a store turning a once worst in district to the top third out of over 30 stores. When a neighboring store was looking for a new store manager I jumped on the opportunity to advance and led a staff of 10 employees to exceed our goals by 110% in under my first 3 months there.  </p>
 			</div> -->
 		<!-- 	<div class="section experience-section">
-				<img class="experience-section__image" width="40" height="40" src="/Users/LMS/Code/github-pages/public/static/img/icons/code.svg">
+				<img class="experience-section__image" width="40" height="40" src="../static/img/icons/code.svg">
 				<h3 class="experience-section__title">Experience & Knowledge</h3>
 				<ol>
 					<li>HTML/CSS</li>
