adding contact and social links

--- a/index.html
+++ b/index.html
@@ -14,11 +14,6 @@
 <body>
 	<div class="main">
 		<div class="page page-home">
-			<!-- <header class="header">
-				<i class="header__menu-icon">
-					<img width="30" height="30" src="../public/static/img/icons/nav.svg">
-				</i>
-			</header> -->
 			<div class="section section-main__copy">
 				<h1 class="title">Lisa is a developer.</h1>
 				<div class="section-tagline">
@@ -30,26 +25,19 @@
 					<h3 class="subheader section-experience__title">Background and Experience</h3>
 				</div>
 				<img class="section-main__icon" width="100" height="100" src="../public/static/img/icons/learn.png">
-				<p class="p">Started learning web development in 2013 by self-instructed learning on Codeacademy and Code School. Attending meetups, and securing 2 internships in Amsterdam and Utrecht.</p>
+				<p class="p">Started learning web development in 2013 by self-instructed learning on Codeacademy and Code School. Attending meetups, and securing 2 internships in Amsterdam and Utrecht. Started coding in <a class="link" href="http://rubyonrails.org/" target="_blank">Ruby on Rails</a>, using <a class="link" href="http://foundation.zurb.com" target="_blank">Foundation</a> and <a class="link" href="http://getbootstrap.com/" target="_blank">Bootstrap</a> for the front-end.</p>
 				<img class="section-main__icon" width="100" height="100" src="../public/static/img/icons/work.svg">
-				<p class="p">Began my first job as a junior developer at <a class="link" target="_blank" href="http://www.qelp.com">Qelp</a> in February 2014.</p>
+				<p class="p">Began my first job as a junior developer at <a class="link" target="_blank" href="http://www.qelp.com">Qelp</a> in February 2014. Here I learned and wrote <a class="link" href="http://coffeescript.org/" target="_blank">CoffeeScript</a>, <a class="link" href="https://jquery.com/" target="_blank">jQuery</a>, utilizing <a class="link" href="http://www.json.org/" target="_blank">JSON</a> files, <a class="link" href="https://aws.amazon.com/s3/" target="_blank">Amazon's S3 Buckets</a> for hosting, HTML/CSS using <a class="link" href="http://handlebarsjs.com/" target="_blank">Handlebars</a> and <a class="link" href="https://mustache.github.io/" target="_blank">Mustache</a> for templating and <a class="link" href="http://lesscss.org" target="_blank">Less</a> as a preprocessor.</p>
 				<img class="section-main__icon" width="100" height="100" src="../public/static/img/icons/volunteer.png">
-				<p class="p">Volunteered at <a class="link" target="_blank" href="http://www.railsgirls.nl/">Rails Girls NL</a> by leading a GIT workshop and coaching at multiple workshops teaching girls what MVC architecture is, HTML/CSS and Javascript.</p>
+				<p class="p">Volunteered at <a class="link" target="_blank" href="http://www.railsgirls.nl/">Rails Girls NL</a> by leading a <a class="link" href="https://git-scm.com/" target="_blank">git</a> workshop and coaching at multiple workshops teaching girls what MVC architecture is, HTML/CSS, <a class="link" href="http://rubyonrails.org/" target="_blank">Ruby on Rails</a>, and <a class="link" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">JavaScript</a>.</p>
 				<img class="section-main__icon" width="100" height="100" src="../public/static/img/icons/magic.png">
-				<p class="p">Started working at <a class="link" target="_blank" href="http://www.shcc.nl">Superhero Cheesecake</a> in November 2015. While there I learned about improving speed, focusing on DRY, efficient code and GreenSock animations.</p>
+				<p class="p">Started working at <a class="link" target="_blank" href="http://www.shcc.nl">Superhero Cheesecake</a> in November 2015. While there I learned about improving speed, focusing on DRY, efficient code, vanilla <a class="link" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">JavaScript</a>, utilizing <a class="link" href="http://backbonejs.org/" target="_blank">Backbone.js</a>, <a class="link" href="https://secure.php.net/" target="_blank">PHP</a> templating and <a class="link" href="https://greensock.com/" target="_blank">GreenSock</a> animations.</p>
 				<img class="section-main__icon" width="100" height="100" src="../public/static/img/icons/growth.png">
-				<p class="p">August 2016, I started my namesake company to freelance on web development projects.</p>
-<!-- 				<p class="p">Hello there! I've recently moved back to the states after 3 wonderful years of living in the Netherlands. Originally from the Chicago suburbs, I went to school in Champaign Urbana to study Art History. After graduting in 2010 I started volunteering at the university's art museum, Krannert and became the Office Manager of a local <a class="link" href="commonground.coop" target="_blank">food co-op</a> . While there I was the tech help-desk for store operations, managed payroll, bookkeeping and hired and managed one employee. Since before college I also had sales experience in the retail sector I stepped up to lead our Owner Loan Campaign to help expand the current store's location to double in size. As Campaign Manager we had an initial goal of $800K and together with a team of volunteers and informative staff members we were able to raise it in under 2 months. When quotes and owner demand grew we found out we needed an additional $200K we achieved it in another month. With $1 million raised and secured in the bank we were able to start and finish construction. I left the co-op to become the assistant manager at a store turning a once worst in district to the top third out of over 30 stores. When a neighboring store was looking for a new store manager I jumped on the opportunity to advance and led a staff of 10 employees to exceed our goals by 110% in under my first 3 months there.  </p>
-			</div> -->
-		<!-- 	<div class="section experience-section">
-				<img class="experience-section__image" width="40" height="40" src="../public/static/img/icons/code.svg">
-				<h3 class="experience-section__title">Experience & Knowledge</h3>
-				<ol>
-					<li>HTML/CSS</li>
-					<li>Javascript</li>
-					<li>Learning </li>
-				</ol>
-			</div> -->
+				<p class="p">August 2016, I started my namesake company to freelance on web development projects. Currently maintaining a <a class="link" href="https://www.drupal.org/" target="_blank">Drupal</a> based <a class="link" href="http://comparativegenomics.illinois.edu" target="_blank">laboratory site</a>.</p>
+				<p class="p">Contact <a class="link" href="mailto:islisamarie@gmail.com?subject=Hey%20Lisa!&amp;body=I%20was%20just%20on%20your%20site%20and%20wanted%20to%20say..">me</a>.</p>
+				<p class="p">Please email me to gain access to view my private repos on <a class="link" href="https://gitlab.com/u/lmschachtschneider" target="_blank">GitLab</a>, I have a <a class="link" href="https://developer.apple.com/swift/" target="_blank">Swift</a> pasta timer app I made with a friend and a music blog, I made at one of my internships in <a class="link" href="http://rubyonrails.org/" target="_blank">Ruby on Rails</a>.</p>
+				<p class="p">Or check out <a class="link" href="https://github.com/lisamschachtschneider/lisamschachtschneider.github.io" target="_blank">this</a> site and other code snippets on <a class="link" href="https://github.com/lisamschachtschneider" target="_blank">GitHub</a>.</p>
+				<p class="p">Connect with me on <a class="link" href="https://www.linkedin.com/in/lmschachtschneider" target="_blank">LinkedIn</a>.</p>
 		</div>
 	</div>
 </body>
