--- a/index.html
+++ b/index.html
@@ -3,42 +3,171 @@
 <head>
 	<title>Lisa is a developer.</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="../public/static/img/favicon.ico" type="image/ico" sizes="16x16"/>
-	<link rel="stylesheet" type="text/css" href="../public/static/css/main.css">
-	<link rel="stylesheet" type="text/css" href="../public/static/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="../public/static/css/layout.css">
-	<link rel="stylesheet" type="text/css" href="../public/static/css/typography.css">
-	<link rel="stylesheet" type="text/css" href="../public/static/css/page-home.css">
+	<link rel="icon" href="/Users/LMS/Code/github-pages/public/static/img/favicon.ico" type="image/ico" sizes="16x16"/>
+	<link rel="stylesheet" type="text/css" href="/Users/LMS/Code/github-pages/public/static/css/main.css">
+	<link rel="stylesheet" type="text/css" href="/Users/LMS/Code/github-pages/public/static/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="/Users/LMS/Code/github-pages/public/static/css/layout.css">
+	<link rel="stylesheet" type="text/css" href="/Users/LMS/Code/github-pages/public/static/css/typography.css">
+	<link rel="stylesheet" type="text/css" href="/Users/LMS/Code/github-pages/public/static/css/page-home.css">
+	<link rel="stylesheet" type="text/css" href="/Users/LMS/Code/github-pages/public/static/css/buttons.css">
+	<link rel="stylesheet" type="text/css" href="/Users/LMS/Code/github-pages/public/static/css/columns.css">
+	<link rel="stylesheet" type="text/css" href="/Users/LMS/Code/github-pages/public/static/css/timeline.css">
+	
 
 </head>
 <body>
 	<div class="main">
 		<div class="page page-home">
-			<div class="section section-main__copy">
-				<h1 class="title">Lisa is a developer.</h1>
-				<div class="section-tagline">
+			<header class="header">
+ 				<i class="header__menu-icon">
+ 					<!-- <img width="30" height="30" src="/Users/LMS/Code/github-pages/public/static/img/icons/nav.svg"> -->
+ 				</i>
+ 			</header>
+			<section class="section section-landing">
+	 			<!-- <a class="button button-arrow page-home__button-arrow--right" href="/">
+	 				<span class="button-arrow__title page-home__button-arrow__title--right">Projects</span>
+					<img class="image " width="120" height="120" src="/Users/LMS/Code/github-pages/public/static/img/icons/arrow.svg">
+				</a>
+				<a class="button button-arrow page-home__button-arrow--left" href="/">
+					<span class="button-arrow__title page-home__button-arrow__title--left">Self-Development</span>
+					<img class="image button-arrow--left" width="120" height="120" src="/Users/LMS/Code/github-pages/public/static/img/icons/arrow.svg">
+				</a> -->
+				<h1 class="title page-home__title">
+					<span class="emphasis">I'M NOT NORMAL</span>
+					I'm a Developer. A Chicago-bred geek with an affinity for fashion, anything outdoors, and what some would call a tenacious drive for excellence.
+				</h1>
+				<a class="button button-arrow page-home__button-arrow--bottom" href="/">
+					<!-- <span class="button-arrow__title page-home__button-arrow__title--bottom">About</span> -->
+					<img class="image button-arrow--bottom" width="120" height="120" src="/Users/LMS/Code/github-pages/public/static/img/icons/arrow.svg">
+				</a>				
+			</section>
+			<section class="section section-about">
+				<div class="section-about__copy">
+					<h2 class="subtitle">Hello! Nice to see you here...</h2>
+					<div class="column-4">
+						<h3 class="subtitle--emphasis">Where I come from...</h3>
+						<p class="p">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna <a class="link" href="/">irure</a>. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute <a class="link" href="/">fugiat</a> dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</p>
+					</div>	
+					<div class="column-4">
+						<h3 class="subtitle--emphasis">Where I am currently..</h3>
+						<p class="p">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in <a class="link" href="/">reprehenderit</a> velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</p>
+					</div>
+					<div class="column-4">
+						<h3 class="subtitle--emphasis">What I will accomplish.</h3>
+						<p class="p">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna <a class="link" href="/">officia</a>. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla <a class="link" href="/">consequat</a>. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</p>
+					</div>
+				</div>
+			</section>
+			<section class="intro">
+			  <div class="container">
+			    <h1>My timeline</h1>
+			  </div>
+			</section>
+
+			<section class="timeline">
+			  <ul>
+			    <li>
+			      <div>
+			        <time>2005</time> Entered college as a fashion design student.
+			      </div>
+			    </li>
+			    <li>
+			      <div>
+			        <time>2008</time> Left art school to persue a degree in Art History.
+			      </div>
+			    </li>
+			    <li>
+			      <div>
+			        <time>2010</time> Graduated with a degree in Art History.
+			      </div>
+			    </li>
+			    <li>
+			      <div>
+			        <time>2011</time> Raised $1 million as Campaign Manager for a co-op's expansion, $700K raised in under 60 days.
+			      </div>
+			    </li>
+			    <li>
+			      <div>
+			        <time>2012</time> Managed a women's fashion retail store and exceeded my goals by 20% each month..
+			      </div>
+			    </li>
+			    <li>
+			      <div>
+			        <time>2013</time> Moved to Utrecht, Netherlands with my husband.
+			      </div>
+			    </li>
+			    <li>
+			      <div>
+			        <time>2013</time> Opened up Terminal and Codeacademy.
+			      </div>
+			    </li>
+			    <li>
+			      <div>
+			        <time>2014</time> Started my first web development internship at Springest, working with Ruby on Rails.
+			      </div>
+			    </li>
+			    <li>
+			      <div>
+			        <time>2015</time> Continued learning RoR as an intern at Inspire.
+			      </div>
+			    </li>
+			    <li>
+			      <div>
+			        <time>2015</time> Took my first junior developer position at Qelp.
+			      </div>
+			    </li>
+			    <li>
+			      <div>
+			        <time>2015</time> Continued front-end development at Superhero Cheesecake.
+			      </div>
+			    </li>
+			    <li>
+			      <div>
+			        <time>2016</time> Moved back to Chicago.
+			      </div>
+			    </li>
+			  </ul>
+			</section>	
+			<section class="section section-contact">
+				<div class="section-contact__copy">
+					<h3 class="subtitle">Tell me what you think</h3>
+					<a class="button button-primary page-home__button-primary" href="mailto:islisamarie@gmail.com?subject=Hey%20Lisa!&amp;body=I%20was%20just%20on%20your%20site%20and%20wanted%20to%20say..">Email me</a>
+				</div>
+			</section>	
+			<footer class="footer">
+				
+			</footer>
+
+			<!-- <div class="section-tagline">
 					<h2 class="subtitle">Web developer & business owner, currently looking for a position to learn and grow in Chicago, IL.</h2>
-					<img class="section-main__icon-chicago" width="40" height="40" src="../public/static/img/icons/chicago.png">
+					<img class="section-main__icon-chicago" width="40" height="40" src="/Users/LMS/Code/github-pages/public/static/img/icons/chicago.png">
 				</div>
 				<div class="section-experience__header">
-					<img class="section-main__icon-title" width="50" height="50" src="../public/static/img/icons/background.svg">
+					<img class="section-main__icon-title" width="50" height="50" src="/Users/LMS/Code/github-pages/public/static/img/icons/background.svg">
 					<h3 class="subheader section-experience__title">Background and Experience</h3>
 				</div>
-				<img class="section-main__icon" width="100" height="100" src="../public/static/img/icons/learn.png">
+				<img class="section-main__icon" width="100" height="100" src="/Users/LMS/Code/github-pages/public/static/img/icons/learn.png">
 				<p class="p">Started learning web development in 2013 by self-instructed learning on Codeacademy and Code School. Attending meetups, and securing 2 internships in Amsterdam and Utrecht. Started coding in <a class="link" href="http://rubyonrails.org/" target="_blank">Ruby on Rails</a>, using <a class="link" href="http://foundation.zurb.com" target="_blank">Foundation</a> and <a class="link" href="http://getbootstrap.com/" target="_blank">Bootstrap</a> for the front-end.</p>
-				<img class="section-main__icon" width="100" height="100" src="../public/static/img/icons/work.svg">
+				<img class="section-main__icon" width="100" height="100" src="/Users/LMS/Code/github-pages/public/static/img/icons/work.svg">
 				<p class="p">Began my first job as a junior developer at <a class="link" target="_blank" href="http://www.qelp.com">Qelp</a> in February 2014. Here I learned and wrote <a class="link" href="http://coffeescript.org/" target="_blank">CoffeeScript</a>, <a class="link" href="https://jquery.com/" target="_blank">jQuery</a>, utilizing <a class="link" href="http://www.json.org/" target="_blank">JSON</a> files, <a class="link" href="https://aws.amazon.com/s3/" target="_blank">Amazon's S3 Buckets</a> for hosting, HTML/CSS using <a class="link" href="http://handlebarsjs.com/" target="_blank">Handlebars</a> and <a class="link" href="https://mustache.github.io/" target="_blank">Mustache</a> for templating and <a class="link" href="http://lesscss.org" target="_blank">Less</a> as a preprocessor.</p>
-				<img class="section-main__icon" width="100" height="100" src="../public/static/img/icons/volunteer.png">
+				<img class="section-main__icon" width="100" height="100" src="/Users/LMS/Code/github-pages/public/static/img/icons/volunteer.png">
 				<p class="p">Volunteered at <a class="link" target="_blank" href="http://www.railsgirls.nl/">Rails Girls NL</a> by leading a <a class="link" href="https://git-scm.com/" target="_blank">git</a> workshop and coaching at multiple workshops teaching girls what MVC architecture is, HTML/CSS, <a class="link" href="http://rubyonrails.org/" target="_blank">Ruby on Rails</a>, and <a class="link" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">JavaScript</a>.</p>
-				<img class="section-main__icon" width="100" height="100" src="../public/static/img/icons/magic.png">
+				<img class="section-main__icon" width="100" height="100" src="/Users/LMS/Code/github-pages/public/static/img/icons/magic.png">
 				<p class="p">Started working at <a class="link" target="_blank" href="http://www.shcc.nl">Superhero Cheesecake</a> in November 2015. While there I learned about improving speed, focusing on DRY, efficient code, vanilla <a class="link" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">JavaScript</a>, utilizing <a class="link" href="http://backbonejs.org/" target="_blank">Backbone.js</a>, <a class="link" href="https://secure.php.net/" target="_blank">PHP</a> templating and <a class="link" href="https://greensock.com/" target="_blank">GreenSock</a> animations.</p>
-				<img class="section-main__icon" width="100" height="100" src="../public/static/img/icons/growth.png">
+				<img class="section-main__icon" width="100" height="100" src="/Users/LMS/Code/github-pages/public/static/img/icons/growth.png">
 				<p class="p">August 2016, I started my namesake company to freelance on web development projects. Currently maintaining a <a class="link" href="https://www.drupal.org/" target="_blank">Drupal</a> based <a class="link" href="http://comparativegenomics.illinois.edu" target="_blank">laboratory site</a>.</p>
 				<p class="p">Contact <a class="link" href="mailto:islisamarie@gmail.com?subject=Hey%20Lisa!&amp;body=I%20was%20just%20on%20your%20site%20and%20wanted%20to%20say..">me</a>.</p>
 				<p class="p">Please email me to gain access to view my private repos on <a class="link" href="https://gitlab.com/u/lmschachtschneider" target="_blank">GitLab</a>, I have a <a class="link" href="https://developer.apple.com/swift/" target="_blank">Swift</a> pasta timer app I made with a friend and a music blog, I made at one of my internships in <a class="link" href="http://rubyonrails.org/" target="_blank">Ruby on Rails</a>.</p>
 				<p class="p">Or check out <a class="link" href="https://github.com/lisamschachtschneider/lisamschachtschneider.github.io" target="_blank">this</a> site and other code snippets on <a class="link" href="https://github.com/lisamschachtschneider" target="_blank">GitHub</a>.</p>
-				<p class="p">Connect with me on <a class="link" href="https://www.linkedin.com/in/lmschachtschneider" target="_blank">LinkedIn</a>.</p>
+				<p class="p">Connect with me on <a class="link" href="https://www.linkedin.com/in/lmschachtschneider" target="_blank">LinkedIn</a>.</p> -->
 		</div>
 	</div>
+	<script src="/Users/LMS/Code/github-pages/public/static/js/timeline.js" type="text/javascript"></script>
 </body>
 </html>
