--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="/Users/LMS/Code/github-pages/public/static/css/buttons.css">
 	<link rel="stylesheet" type="text/css" href="/Users/LMS/Code/github-pages/public/static/css/columns.css">
 	<link rel="stylesheet" type="text/css" href="/Users/LMS/Code/github-pages/public/static/css/timeline.css">
+	<link rel="stylesheet" type="text/css" href="/Users/LMS/Code/github-pages/public/static/css/list.css">	
 	
 
 </head>
@@ -136,8 +137,56 @@
 			</section>	
 			<section class="section section-contact">
 				<div class="section-contact__copy">
-					<h3 class="subtitle">Tell me what you think</h3>
+					<h3 class="subtitle section-contact__subtitle">Tell me what you think</h3>
+					<!-- <p class="p">Thanks for visiting</p> -->
 					<a class="button button-primary page-home__button-primary" href="mailto:islisamarie@gmail.com?subject=Hey%20Lisa!&amp;body=I%20was%20just%20on%20your%20site%20and%20wanted%20to%20say..">Email me</a>
+					<h4 class="h4 section-contact__h4">Follow me on other sites:</h4>
+					<ul class="list list-social">
+						<li class="list__item list-social__item">
+							<a class="button ir button-social" href="https://github.com/lisamschachtschneider/" target="_blank">Github
+								<svg aria-hidden="true" class="svg" height="28" version="1.1" viewBox="0 0 16 16" width="28">
+							    	<path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path>
+								</svg>
+							</a>
+						</li>
+						<li class="list__item list-social__item">
+							<a class="button ir button-social" href="https://twitter.com/lisamarieschach" target="_blank">Twitter
+								<svg version="1.1" id="Layer_1" class="svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+									 width="512px" height="512px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
+									<g id="_x23_020201ff">
+									<path fill="#020201" d="M307.875,126.404c8.923-6.734,19.259-11.948,30.478-13.262c-1.549,6.708-7.915,10.219-13.461,13.271
+										c8.374-2.476,16.54-6.131,25.363-6.735c2.359-0.081,5.718,0.018,6.555,2.755c1.261,3.413-2.188,6.06-4.808,7.482
+										c-9.634,4.97-20.762,5.699-30.559,10.291c20.132-1.891,40.229,5.916,55.499,18.8c18.224,15,30.271,36.717,34.664,59.812
+										c16.107,4.322,33.521,1.189,48.638-5.231c-7.599,17.215-26.957,25.075-44.641,26.606c14.694,5.546,30.865,6.491,46.396,4.843
+										c-12.316,13.642-31.369,18.954-49.276,18.539c-7.447,30.433-25.157,57.732-48.134,78.773
+										c-44.713,40.481-106.641,59.883-166.479,56.03C140.587,394.867,83.98,366.514,50,319.469c2.971,1.738,5.465,4.133,8.301,6.061
+										c26.309,19.034,61.333,25.083,92.612,16.584c18.98-4.897,36.212-15.514,49.979-29.379c-8.805,0.595-18.583-0.973-24.967-7.608
+										c-3.979-3.79-5.618-10.029-3.223-15.107c2.89-6.411,9.328-10.057,15.415-12.93c-19.961,2.854-41.714-6.446-50.916-24.904
+										c6.743-8.041,17.521-10.624,27.534-11.407c-11.651-3.395-23.617-7.554-32.45-16.252c-7.023-6.582-11.588-15.711-12.957-25.219
+										c8.248-1.54,16.531-3.413,24.985-3.061c-19.168-9.977-36.69-28.974-35.159-51.942c36.348,13.262,72.111,28.379,106.261,46.639
+										c11.949,6.564,21.88,16.063,31.649,25.436c9.462-24.571,19.618-49.241,35.006-70.796c8.247-11.336,17.98-21.888,29.938-29.361
+										C311.539,119.939,309.631,123.181,307.875,126.404z"/>
+									</g>
+								</svg>
+							</a>							
+						</li>
+						<li class="list__item list-social__item">
+							<a class="button ir button-social" href="https://www.pinterest.com/lms136747/" target="_blank">Pinterest
+								<svg version="1.1" id="Layer_1" class="svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+							 width="512px" height="512px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+									<g>
+									<path d="M256,32C132.3,32,32,132.3,32,256c0,91.7,55.2,170.5,134.1,205.2c-0.6-15.6-0.1-34.4,3.9-51.4
+									c4.3-18.2,28.8-122.1,28.8-122.1s-7.2-14.3-7.2-35.4c0-33.2,19.2-58,43.2-58c20.4,0,30.2,15.3,30.2,33.6
+									c0,20.5-13.1,51.1-19.8,79.5c-5.6,23.8,11.9,43.1,35.4,43.1c42.4,0,71-54.5,71-119.1c0-49.1-33.1-85.8-93.2-85.8
+									c-67.9,0-110.3,50.7-110.3,107.3c0,19.5,5.8,33.3,14.8,43.9c4.1,4.9,4.7,6.9,3.2,12.5c-1.1,4.1-3.5,14-4.6,18
+									c-1.5,5.7-6.1,7.7-11.2,5.6c-31.3-12.8-45.9-47-45.9-85.6c0-63.6,53.7-139.9,160.1-139.9c85.5,0,141.8,61.9,141.8,128.3
+									c0,87.9-48.9,153.5-120.9,153.5c-24.2,0-46.9-13.1-54.7-27.9c0,0-13,51.6-15.8,61.6c-4.7,17.3-14,34.5-22.5,48
+									c20.1,5.9,41.4,9.2,63.5,9.2c123.7,0,224-100.3,224-224C480,132.3,379.7,32,256,32z"/>
+									</g>
+								</svg>
+							</a>
+						</li>
+					</ul>
 				</div>
 			</section>	
 			<footer class="footer">
