refactoring timeline css and copy updates

--- a/index.html
+++ b/index.html
@@ -28,98 +28,99 @@
 				<div class="section-about__copy">
 					<h2 class="subtitle">Hello! Nice to see you here...</h2>
 					<div class="column-4">
-						<h3 class="subtitle--emphasis">Where I come from...</h3>
+						<h3 class="subtitle--emphasis">Where I've been...</h3>
 						<p class="p">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna <a class="link" href="/">irure</a>. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute <a class="link" href="/">fugiat</a> dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							Born and raised in Illinois, just outside the city limits of Chicago. I started my work life in retail, excelling at leading teams to reach and exceed our goals. In July 2013 I moved to <a class="link" href="https://goo.gl/maps/sKJJ6xeAsSv">Utrecht, The Netherlands</a> and spent three years living and working there. While there I started to learn how to code and started my new career in development. We also had fun traveling to 11 other countries, countless cities; tried new food, hiked, biked and kayaked to take in the scenery. This experience has given me a new and unique perspective to my life and work. I love solving problems and taking on new challenges.
 						</p>
 					</div>	
 					<div class="column-4">
 						<h3 class="subtitle--emphasis">Where I am currently..</h3>
 						<p class="p">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in <a class="link" href="/">reprehenderit</a> velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							Upon relocating to Chicago I started my own freelancing business for web development. I'm currently looking for the right company to learn and grow at to do backend development. I've started <a class="link" href="udacity.com/course/intro-to-computer-science--cs101">udacity's Intro to Computer Science</a> class to learn python. I have expereince with Ruby on Rails and Javascript for web development. For the past year and a half I've been creating responsive solutions that work across multiple use-cases and browsers for high profile companies.
 						</p>
 					</div>
 					<div class="column-4">
 						<h3 class="subtitle--emphasis">What I will accomplish.</h3>
 						<p class="p">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna <a class="link" href="/">officia</a>. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla <a class="link" href="/">consequat</a>. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							Everyday is chance to improve, I enjoy looking back to see what I've learned and how I've grown. Contributing to open source, growing my skills to become a lead developer and contributing to a great team are some of my goals for the future. 
 						</p>
 					</div>
 				</div>
 			</section>
-			<section class="intro">
-			  <div class="container">
-			    <h1>My timeline</h1>
+
+			<section class="timeline__intro">
+			  <div class="timeline__intro-container">
+			    <h1 class="timeline__header subtitle">My timeline</h1>
 			  </div>
 			</section>
 
 			<section class="timeline">
-			  <ul>
-			    <li>
-			      <div>
-			        <time>2005</time> Entered college as a fashion design student.
+			  <ul class="list timeline__list">
+			    <li class="timeline__list__item">
+			      <div class="timeline__block">
+			        <time>2016</time> Moved back to Chicago.
 			      </div>
 			    </li>
-			    <li>
-			      <div>
-			        <time>2008</time> Left art school to persue a degree in Art History.
-			      </div>
-			    </li>
-			    <li>
-			      <div>
-			        <time>2010</time> Graduated with a degree in Art History.
-			      </div>
-			    </li>
-			    <li>
-			      <div>
-			        <time>2011</time> Raised $1 million as Campaign Manager for a co-op's expansion, $700K raised in under 60 days.
-			      </div>
-			    </li>
-			    <li>
-			      <div>
-			        <time>2012</time> Managed a women's fashion retail store and exceeded my goals by 20% each month..
-			      </div>
-			    </li>
-			    <li>
-			      <div>
-			        <time>2013</time> Moved to Utrecht, Netherlands with my husband.
-			      </div>
-			    </li>
-			    <li>
-			      <div>
-			        <time>2013</time> Opened up Terminal and Codeacademy.
-			      </div>
-			    </li>
-			    <li>
-			      <div>
-			        <time>2014</time> Started my first web development internship at Springest, working with Ruby on Rails.
-			      </div>
-			    </li>
-			    <li>
-			      <div>
-			        <time>2015</time> Continued learning RoR as an intern at Inspire.
-			      </div>
-			    </li>
-			    <li>
-			      <div>
-			        <time>2015</time> Took my first junior developer position at Qelp.
-			      </div>
-			    </li>
-			    <li>
-			      <div>
+			    <li class="timeline__list__item">
+			      <div class="timeline__block">
 			        <time>2015</time> Continued front-end development at Superhero Cheesecake.
 			      </div>
 			    </li>
-			    <li>
-			      <div>
-			        <time>2016</time> Moved back to Chicago.
+			    <li class="timeline__list__item">
+			      <div class="timeline__block">
+			        <time>2015</time> Took my first junior developer position at Qelp.
+			      </div>
+			    </li>
+			    <li class="timeline__list__item">
+			      <div class="timeline__block">
+			        <time>2015</time> Continued learning RoR as an intern at Inspire.
+			      </div>
+			    </li>
+			    <li class="timeline__list__item">
+			      <div class="timeline__block">
+			        <time>2014</time> Started my first web development internship at Springest, working with Ruby on Rails.
+			      </div>
+			    </li>
+			    <li class="timeline__list__item">
+			      <div class="timeline__block">
+			        <time>2013</time> Opened up Terminal and Codeacademy.
+			      </div>
+			    </li>
+			    <li class="timeline__list__item">
+			      <div class="timeline__block">
+			        <time>2013</time> Moved to Utrecht, Netherlands with my husband.
+			      </div>
+			    </li>
+			    <li class="timeline__list__item">
+			      <div class="timeline__block">
+			        <time>2012</time> Managed a women's fashion retail store and exceeded my goals by 20% each month.
+			      </div>
+			    </li>
+			    <li class="timeline__list__item">
+			      <div class="timeline__block">
+			        <time>2011</time> Raised $1 million as Campaign Manager for a co-op's expansion, $700K raised in under 60 days.
+			      </div>
+			    </li>
+			    <li class="timeline__list__item">
+			      <div class="timeline__block">
+			        <time>2010</time> Graduated with a degree in Art History.
+			      </div>
+			    </li>
+			    <li class="timeline__list__item">
+			      <div class="timeline__block">
+			        <time>2008</time> Left art school to persue a degree in Art History.
+			      </div>
+			    </li>
+			    <li class="timeline__list__item">
+			      <div class="timeline__block">
+			        <time>2005</time> Entered college as a fashion design student.
 			      </div>
 			    </li>
 			  </ul>
 			</section>	
 			<section class="section section-contact">
 				<div class="section-contact__copy">
-					<h3 class="subtitle section-contact__subtitle">Tell me what you think</h3>
+					<h3 class="subtitle section-contact__subtitle">Send me a message...</h3>
 					<!-- <p class="p">Thanks for visiting</p> -->
 					<a class="button button-primary page-home__button-primary" href="mailto:islisamarie@gmail.com?subject=Hey%20Lisa!&amp;body=I%20was%20just%20on%20your%20site%20and%20wanted%20to%20say..">Email me</a>
 					<h4 class="h4 section-contact__h4">Follow me on other sites:</h4>
