--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<img class="section-main__icon" width="100" height="100" src="../public/static/img/icons/growth.png">
 				<p class="p">August 2016, I started my namesake company to freelance on web development projects. Currently maintaining a <a class="link" href="https://www.drupal.org/" target="_blank">Drupal</a> based <a class="link" href="http://comparativegenomics.illinois.edu" target="_blank">laboratory site</a>.</p>
 				<p class="p">Contact <a class="link" href="mailto:islisamarie@gmail.com?subject=Hey%20Lisa!&amp;body=I%20was%20just%20on%20your%20site%20and%20wanted%20to%20say..">me</a>.</p>
-				<p class="p">Please email me to gain access to view my private repos on <a class="link" href="https://gitlab.com/u/lmschachtschneider" target="_blank">GitLab</a>, I have a <a class="link" href="https://developer.apple.com/swift/" target="_blank">Swift</a> pasta timer app I made with a friend and a music blog, I made at one of my internships in <a class="link" href="http://rubyonrails.org/" target="_blank">Ruby on Rails</a>.</p>
+				<p class="p">Please email me to gain access to view my private repo on <a class="link" href="https://gitlab.com/u/lmschachtschneider" target="_blank">GitLab</a>, I have a <a class="link" href="https://developer.apple.com/swift/" target="_blank">Swift</a> pasta timer app I made with a friend.</p>
 				<p class="p">Or check out <a class="link" href="https://github.com/lisamschachtschneider/lisamschachtschneider.github.io" target="_blank">this</a> site and other code snippets on <a class="link" href="https://github.com/lisamschachtschneider" target="_blank">GitHub</a>.</p>
 				<p class="p">Connect with me on <a class="link" href="https://www.linkedin.com/in/lmschachtschneider" target="_blank">LinkedIn</a>.</p>
 		</div>
