updating copy, fixing timeline bullet alignment, adding parallax effect and images

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
  			</header>
 			<section class="section section-landing">
 				<h1 class="title page-home__title">
-					<span class="emphasis">I'M NOT NORMAL</span>
-					I'm a Developer. A Chicago-bred geek with an affinity for fashion, anything outdoors, and what some would call a tenacious drive for excellence.
+					<span class="emphasis">Just develop it</span>
+					A Chicago born and bred geek with a love for tech, exploring, and a tenacious drive to succeed.
 				</h1>
 				<a class="button button-arrow page-home__button-arrow--bottom" href="/">
 					<img class="image button-arrow--bottom" width="120" height="120" src="/Users/LMS/Code/github-pages/public/static/img/icons/arrow.svg">
@@ -30,7 +30,7 @@
 					<div class="column-4">
 						<h3 class="subtitle--emphasis">Where I've been...</h3>
 						<p class="p">
-							Born and raised in Illinois, just outside the city limits of Chicago. I started my work life in retail, excelling at leading teams to reach and exceed our goals. In July 2013 I moved to <a class="link" href="https://goo.gl/maps/sKJJ6xeAsSv">Utrecht, The Netherlands</a> and spent three years living and working there. While there I started to learn how to code and started my new career in development. We also had fun traveling to 11 other countries, countless cities; tried new food, hiked, biked and kayaked to take in the scenery. This experience has given me a new and unique perspective to my life and work. I love solving problems and taking on new challenges.
+							Born and raised in Illinois, just outside the city limits of Chicago. I started my work life in retail, excelling at leading teams to reach and exceed our goals. In July 2013 I moved to <a class="link" href="https://goo.gl/maps/sKJJ6xeAsSv">Utrecht, The Netherlands</a> and spent three years living and working there. While there I started to learn how to code and started my new career in development. I've traveled to 11 other countries, countless cities; tried new food, hiked, biked and kayaked to take in the scenery. This experience has given me a new and unique perspective to my life and work.
 						</p>
 					</div>	
 					<div class="column-4">
@@ -42,10 +42,13 @@
 					<div class="column-4">
 						<h3 class="subtitle--emphasis">What I will accomplish.</h3>
 						<p class="p">
-							Everyday is chance to improve, I enjoy looking back to see what I've learned and how I've grown. Contributing to open source, growing my skills to become a lead developer and contributing to a great team are some of my goals for the future. 
+							I love solving problems and taking on new challenges. Everyday is chance to improve, I enjoy looking back to see what I've learned and how I've grown. Contributing to open source, growing my skills to become a lead developer and contributing to a great team are some of my goals for the future.
 						</p>
 					</div>
 				</div>
+			</section>
+
+			<section class="section-ischia">	
 			</section>
 
 			<section class="timeline__intro">
@@ -58,7 +61,7 @@
 			  <ul class="list timeline__list">
 			    <li class="timeline__list__item">
 			      <div class="timeline__block">
-			        <time>2016</time> Moved back to Chicago.
+			        <time>2016</time> Moved back to Chicago and started my namesake business.
 			      </div>
 			    </li>
 			    <li class="timeline__list__item">
@@ -117,7 +120,11 @@
 			      </div>
 			    </li>
 			  </ul>
-			</section>	
+			</section>
+		
+			<section class="section-travel">	
+			</section>
+		
 			<section class="section section-contact">
 				<div class="section-contact__copy">
 					<h3 class="subtitle section-contact__subtitle">Send me a message...</h3>
