removing collumns, refactoring primary button, contact section and updating copy

--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
 				</a>				
 			</section>
 			<section class="section section-about">
-				<div class="section-about__copy">
+				<div class="section-about__copy--wrapper">
 					<h2 class="subtitle">Hello! Nice to see you here...</h2>
-					<div class="column-4">
+					<div class="section-about__copy">
 						<h3 class="subtitle--emphasis">Where I've been...</h3>
 						<p class="p">
 							Born and raised in Illinois, just outside the city limits of Chicago. I started my work life in retail, excelling at leading teams to reach and exceed our goals. In July 2013 I moved to <a class="link" href="https://goo.gl/maps/sKJJ6xeAsSv">Utrecht, The Netherlands</a> and spent three years living and working there. While there I started to learn how to code and started my new career in development. I've traveled to 11 other countries, countless cities; tried new food, hiked, biked and kayaked to take in the scenery. This experience has given me a new and unique perspective to my life and work.
 						</p>
 					</div>	
-					<div class="column-4">
+					<div class="section-about__copy">
 						<h3 class="subtitle--emphasis">Where I am currently..</h3>
 						<p class="p">
 							Upon relocating to Chicago I started my own freelancing business for web development. I'm currently looking for the right company to learn and grow at to do backend development. I've started <a class="link" href="udacity.com/course/intro-to-computer-science--cs101">udacity's Intro to Computer Science</a> class to learn python. I have expereince with Ruby on Rails and Javascript for web development. For the past year and a half I've been creating responsive solutions that work across multiple use-cases and browsers for high profile companies.
 						</p>
 					</div>
-					<div class="column-4">
+					<div class="section-about__copy">
 						<h3 class="subtitle--emphasis">What I will accomplish.</h3>
 						<p class="p">
 							I love solving problems and taking on new challenges. Everyday is chance to improve, I enjoy looking back to see what I've learned and how I've grown. Contributing to open source, growing my skills to become a lead developer and contributing to a great team are some of my goals for the future.
@@ -53,7 +53,7 @@
 
 			<section class="timeline__intro">
 			  <div class="timeline__intro-container">
-			    <h1 class="timeline__header subtitle">My timeline</h1>
+			    <h1 class="timeline__header subtitle">"You don't learn to walk by following rules. You learn by doing, and by falling over." - Richard Branson</h1>
 			  </div>
 			</section>
 
@@ -127,10 +127,10 @@
 		
 			<section class="section section-contact">
 				<div class="section-contact__copy">
-					<h3 class="subtitle section-contact__subtitle">Send me a message...</h3>
-					<!-- <p class="p">Thanks for visiting</p> -->
+					<h3 class="subtitle section-contact__subtitle">Let's work on the next challenge together</h3>
+					<p class="p section-contact__p">Send me a message...</p>
 					<a class="button button-primary page-home__button-primary" href="mailto:islisamarie@gmail.com?subject=Hey%20Lisa!&amp;body=I%20was%20just%20on%20your%20site%20and%20wanted%20to%20say..">Email me</a>
-					<h4 class="h4 section-contact__h4">Follow me on other sites:</h4>
+					<h4 class="h4 section-contact__h4">Or check out my repos, tweets and favorite collections</h4>
 					<ul class="list list-social">
 						<li class="list__item list-social__item">
 							<a class="button ir button-social" href="https://github.com/lisamschachtschneider/" target="_blank">Github
