refactored arrow buttons, cleanup old unused code and adding hover effects

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
 					<span class="emphasis">Just develop it</span>
 					A Chicago born and bred geek with a love for tech, exploring, and a tenacious drive to succeed.
 				</h1>
-				<a class="button button-arrow page-home__button-arrow--bottom" href="/">
-					<img class="image button-arrow--bottom" width="120" height="120" src="/Users/LMS/Code/github-pages/public/static/img/icons/arrow.svg">
-				</a>				
+				<img class="image button-arrow button-arrow--bottom page-home__button-arrow--bottom" width="120" height="120" src="/Users/LMS/Code/github-pages/public/static/img/icons/arrow.svg">
 			</section>
 			<section class="section section-about">
 				<div class="section-about__copy--wrapper">
