adding breakpoint and adding responsiveness

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<section class="section section-landing">
 				<h1 class="title page-home__title">
 					<span class="emphasis">Just develop it</span>
-					A Chicago born and bred geek with a love for tech, exploring, and a tenacious drive to succeed.
+					I'm a Chicago born and bred geek with a love for tech, exploring, and a tenacious drive to succeed.
 				</h1>
 				<img class="image button-arrow button-arrow--bottom page-home__button-arrow--bottom" width="120" height="120" src="/Users/LMS/Code/github-pages/public/static/img/icons/arrow.svg">
 			</section>
@@ -128,7 +128,7 @@
 					<h3 class="subtitle section-contact__subtitle">Let's work on the next challenge together</h3>
 					<p class="p section-contact__p">Send me a message...</p>
 					<a class="button button-primary page-home__button-primary" href="mailto:islisamarie@gmail.com?subject=Hey%20Lisa!&amp;body=I%20was%20just%20on%20your%20site%20and%20wanted%20to%20say..">Email me</a>
-					<h4 class="h4 section-contact__h4">Or check out my repos, tweets and favorite collections</h4>
+					<p class="p section-contact__social-title">Or check out my repos, tweets and favorite collections</p>
 					<ul class="list list-social">
 						<li class="list__item list-social__item">
 							<a class="button ir button-social" href="https://github.com/lisamschachtschneider/" target="_blank">Github
